# CareURDF

./: README.md  run_extract_parts.sh
fbx/: SMPL-X-MeshOnly.fbx
mid/: covertex.txt  hier.txt  offset.txt
python_script/: combine2fbx.py  extract_vertex_group.py
smpl_description/: CMakeLists.txt  package.xml  smpl_f_for_moveit.urdf  smpl_f_for_unity.urdf
smpl_description/smpl_stl_normal/: f_avg_L_Ankle.stl  f_avg_L_Collar.stl  f_avg_L_Elbow.stl  f_avg_L_Hand.stl  f_avg_L_Hip.stl  f_avg_L_Knee.stl  f_avg_L_Shoulder.stl  f_avg_L_Wrist.stl  f_avg_Pelvis.stl  f_avg_R_Collar.stl  f_avg_R_Hand.stl  f_avg_R_Hip.stl  f_avg_Spine1.stl  f_avg_Spine3.stl
smplx_description/: CMakeLists.txt  package.xml  smplx_f_for_moveit.urdf  smplx_f_for_unity.urdf
smplx_description/smplx_stl_normal/: f_avg_Head.stl  f_avg_L_Foot.stl  f_avg_Neck.stl  f_avg_R_Ankle.stl  f_avg_R_Elbow.stl  f_avg_R_Foot.stl  f_avg_R_Knee.stl  f_avg_R_Shoulder.stl  f_avg_R_Wrist.stl  f_avg_Spine2.stl
